<resources>
    <!-- General Strings -->
    <string name="app_name">WikiFont</string>
    <string name="welcome_message">Welcome to the Main Screen!</string>
    <string name="options_button">Options</string>
    <string name="language_selection">Select Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="basque">Basque</string>
    <string name="fuentes_de">Fountains in %s</string>
    <string name="localidades">Municipalities of Uribe-Coast</string>
    <string name="ordenar_alfa">Sort municipalities alphabetically</string>
    <string name="ordenar_popu">Sort municipalities by population</string>
    <string name="idiomas">Select your language</string>
    <string name="temas">Choose a theme</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="font_mode">Font</string>
    <string name="font">Font</string>
    <string name="fonts">Fonts</string>
    <string name="back">Back</string>

    <!-- Navigation/Toolbar Menu Strings -->
    <string name="access">Log in to access your fountains</string>
    <string name="menu">Home</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Close session</string>
    <string name="map">Map</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- Otras actividades -->
    <string name="add_font">Add fountain</string>
    <string name="save_change">Save changes</string>
    <string name="delete_font">Delete fountain</string>
    <string name="delete_text">Do you want to eliminate this fountain?</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="saved">saved</string>
    <string name="notification">You have saved the fountain: </string>
    <string name="toast_fields">All fields are mandatory.</string>
    <string name="toast_saved">Font saved correctly.</string>
    <string name="toast_theme_applied">Theme applied</string>
    <string name="toast_language_applied">Language applied</string>
    <string name="more_info">Click here for more information</string>

    <string name="no_location">Location unavailable</string>
    <string name="route_error">Failed to calculate route</string>
    <string name="step">Step</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="user_hint">Name or email</string>
    <string name="login_success">Login successful</string>
    <string name="login_error">Invalid credentials</string>
    <string name="register_success">Registration successful</string>
    <string name="register_error">Registration failed</string>
    <string name="network_error">Network error</string>

    <string name="change_photo">Change photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_gallery">Choose from gallery</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_saving_image">Error saving image</string>
    <string name="permission_needed">Permission needed</string>
    <string name="permission_gallery_explanation">To change your profile picture, we need access to your images.</string>
    <string name="accept">ACCEPT</string>
    <string name="permission_camera_explanation">To take a profile picture, we need access to your camera.</string>

    <!-- Map info strings -->
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="total_distance">Total travelled</string>

    <!-- Widget strings -->
    <string name="widget_loading">Updating…</string>
    <string name="widget_distance_format">%1$.0f m away</string>
    <string name="no_fountains">No fountains</string>
    <string name="quiz_not_enough">Not enough fountains for quiz</string>

    <string name="nearby_fountains">There are %1$d fountains within %2$d m</string>
    <string name="location_channel_name">Location service</string>


</resources>