<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Main-->
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu"
        app:showAsAction="always" />

    <!--Atrás-->
    <item
        android:id="@+id/action_backspace"
        android:icon="@drawable/ic_backspace"
        android:title="@string/back"
        app:showAsAction="always" />

    <!--Buscar-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <!--Google maps-->
    <item
        android:id="@+id/action_google_maps"
        android:icon="@drawable/ic_maps"
        android:title="@string/fonts"
        app:showAsAction="always" />

</menu>